cabal-version: 2.4

name: MikeyDB
version: 0.1.0.0
synopsis: In-memory database with AOF persistence
homepage: https://mikey.bike
license: BSD-3-Clause
author: Michael Hoy
maintainer: mjh@mjhoy.com

executable mikeydb
  main-is: Main.hs
  other-modules: Resp
               , Types
               , Db
               , Server
               , Fsync
  build-depends: base ^>=4.14.0.0
               , containers ^>=0.6.0.1
               , bytestring ^>=0.10.8.2
               , utf8-string ^>=1.0.1.1
               , attoparsec ^>=0.13.2.2
               , network ^>=2.8.0.0
               , optparse-applicative ^>=0.16.1.0
               , transformers ^>=0.5.6.2
               , unix ^>=2.7.2.2
  hs-source-dirs: src
  default-language: Haskell2010

